--- a/CSS/CSS Project/index.html
+++ b/CSS/CSS Project/index.html
@@ -9,6 +9,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="576max.css" />
     <link rel="stylesheet" href="576min.css" />
@@ -224,7 +225,7 @@
                     <p>Want to get an instant discount for your next tour? Leave your email and sign up for our
                         newsletter with 25% off all our offers.</p>
                     <form action="#">
-                        <input type="text" name="" id="">
+                        <input type="text" name="" id="" placeholder="Email">
                         <button>Submit</button>
                     </form>
                     <p>Subscribe to our free weekly newsletter for new update releases (no spam)</p>
@@ -244,9 +245,9 @@
             <div class="fb-grid">
                 <div class="fb1">
                     <div class="para">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde animi est non, reiciendis
+                        <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde animi est non, reiciendis
                             temporibus
-                            atque quo aliquam</p>
+                            atque quo aliquam"</p>
                     </div>
                     <div class="icon-container">
                         <div class="icon">
@@ -260,9 +261,9 @@
                 </div>
                 <div class="fb2">
                     <div class="para">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde animi est non, reiciendis
+                        <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde animi est non, reiciendis
                             temporibus
-                            atque quo aliquam</p>
+                            atque quo aliquam"</p>
                     </div>
                     <div class="icon-container">
                         <div class="icon">
@@ -276,9 +277,9 @@
                 </div>
                 <div class="fb3">
                     <div class="para">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde animi est non, reiciendis
+                        <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde animi est non, reiciendis
                             temporibus
-                            atque quo aliquam</p>
+                            atque quo aliquam"</p>
                     </div>
                     <div class="icon-container">
                         <div class="icon">
@@ -293,19 +294,96 @@
             </div>
         </div>
     </section>
-    <footer>
+    <div class="foot-main">
         <div class="footer-container">
             <div class="footer-flex">
                 <div class="stroll">
                     <a>
                         <h3>Str<span><i class="fa-solid fa-earth-americas fa-sm"></i></span>ll</h3>
                     </a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur hic odio voluptatem tenetur
+                        consequatur.Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <div class="icons">
+                        <span class="facebook"><i class="fa-brands fa-facebook"></i></span>
+                        <span class="linkedin"><i class="fa-brands fa-linkedin"></i></span>
+                        <span class="twitter"><i class="fa-brands fa-twitter"></i></span>
+                        <span class="gplus"><i class="fa-brands fa-square-google-plus"></i></span>
+                        <span class="github"><i class="fa-brands fa-github"></i></span>
+                    </div>
                 </div>
                 <div class="links-gridcontainer">
-                    <div class="hadc"></div>
-                    <div class="lfst"></div>
+                    <div class="hadc">
+                        <h3>QUICK LINKS</h3>
+                        <ul>
+                            <li>Home</li>
+                            <li>About</li>
+                            <li>Destinations</li>
+                            <li>Contact</li>
+                        </ul>
+                    </div>
+                    <div class="lfst">
+                        <h3>HELP & SUPPORT</h3>
+                        <ul>
+                            <li>Live Chart</li>
+                            <li>Faq</li>
+                            <li>Support</li>
+                            <li>Terms of Services</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="iggallery"></div>
+                <div class="iggallery">
+                    <h3>INSTAGRAM GALLERY</h3>
+                    <div class="rowgallery">
+                        <div class="colgallery">
+                            <div class="img-container">
+                                <a href="#"><img src="img/g1.jpg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="colgallery">
+                            <div class="img-container">
+                                <a href="#"><img src="img/g2.jpg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="colgallery">
+                            <div class="img-container">
+                                <a href="#"><img src="img/g3.jpg" alt=""></a>
+                            </div>
+
+                        </div>
+                        <div class="colgallery">
+                            <div class="img-container">
+                                <a href="#"><img src="img/g4.jpg" alt=""></a>
+                            </div>
+
+                        </div>
+                        <div class="colgallery">
+                            <div class="img-container">
+                                <a href="#"><img src="img/g5.jpg" alt=""></a>
+                            </div>
+
+                        </div>
+                        <div class="colgallery">
+                            <div class="img-container">
+                                <a href="#"><img src="img/g6.jpg" alt=""></a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="copyrights">
+            <div class="left">
+                <p>© 2023 Stroll. All rights reserved. Design by <a href="#">Siddharth.V</a></p>
+            </div>
+            <div class="right">
+                <ul>
+                    <li>Privacy Policy</li>
+                    <li>About Us</li>
+                    <li>Contact Us</li>
+                </ul>
             </div>
         </div>
     </footer>
