--- a/CSS/flexbox-webpage.html
+++ b/CSS/flexbox-webpage.html
@@ -24,8 +24,9 @@
             display: flex;
             justify-content: space-between;
             background-image: url(/images/Worldmap.png);
+            background-size:cover ;
             background-repeat: no-repeat;
-            height: 515px;
+            height: 800px;
         }
 
         ul {
@@ -99,7 +100,7 @@
 <body>
     <div class="header">
 
-        <div class="logo"><img src="/images/camera.ico" width="150px"></div>
+        <div class="logo"><h2>Portfolio</h2></div>
         <div class="navbar">
             <ul>
                 <li><a href="">Home</a></li>
