--- a/HTML/Registration Form.html
+++ b/HTML/Registration Form.html
@@ -22,7 +22,7 @@
 
 <body>
     <center>
-        <input type="image" src="/images/student.jpg" alt="student" width="100px" height="100px"><br><br>
+        <input type="image" src="" alt="student" width="100px" height="100px"><br><br>
 
         <form method="post" style="font-size: medium;">
 
